# apodstatus

./: .gitignore  Cargo.toml  README.md
pkg/: Makefile  PKGBUILD  apodstatus.desktop
src/: main.rs
