[package]
name = "apodstatus"
version = "0.1.0"
edition = "2021"
authors = ["Denis Salmanovich"]
readme = "README.md"
description = "Airpods status and information for Linux."
repository = "https://github.com/denix666/apodstatus"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
airinfo = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
eframe = "0.23.0"
